<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">

    <string name="contact_email">swipper-contact@globant.com</string>

    <!-- Generic -->
    <string name="app_name">Swipper</string>
    <string name="title_section1">All Categories</string>
    <string name="title_section2">Food</string>
    <string name="title_section3">Gas</string>
    <string name="title_section4">Taxi</string>
    <string name="title_section5">Car rental</string>
    <string name="title_section6">Lodging</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="more">MORE</string>
    <string name="network_error">This App requires an Internet connection</string>

    <!-- MainActivity -->
    <string name="myLocationButtonTapped">Getting your location...\nPlease wait...</string>
    <string name="my_location">My Location</string>
    <string name="action_monocle">Monocle</string>
    <string name="action_list">List</string>
    <string name="action_map">Map</string>
    <string name="error_no_camera">Your device doesn\'t have a camera. You can\'t use this feature.</string>

    <!-- Nav Drawer -->
    <string name="apply">APPLY ›</string>

    <!-- Place Details -->
    <string name="textEditGeolocationInformation_PlaceDetails"><u>edit</u></string>
    <string name="textDescriptionHeader_PlaceDetails">Description</string>
    <string name="textReadMoreDescription_PlaceDetails"><u>read more</u></string>
    <string name="textReviewsHeader_PlaceDetails">Reviews</string>
    <string name="textAddReview_PlaceDetails"><u>+ add review</u></string>
    <string name="textMoreReviews_PlaceDetails"><u>more reviews</u></string>
    <string name="textPhotosHeader_PlaceDetails">Photos</string>

    <!-- Content Descriptions -->
    <string name="imageLocationTypeDescription">Type of place</string>
    <string name="imageExitButtonDescription">Exit Button (used as equivalent of "back" button on most cases)</string>
    <string name="imageGenericLocationDescription">Standard image used when marking a place in a (google) map</string>
    <string name="imageShowPlaceInMapDescription">Return to Map view and show currently described place</string>
    <string name="imageNavigateToPlaceDescription">Return to Map and show how to get to currently described place</string>
    <string name="imageCallToPlaceDescription">Make a phone call to currently described place</string>
    <string name="imageSharePlaceDescription">Share place</string>
    <string name="imageSplashLogoDescription">Swipper Logo</string>
    <string name="imageSplashStreetsDescription">Splash footer image</string>
    <string name="imageItemPagerDescription">Place photo</string>
    <string name="lodging">Lodging</string>
    <string name="carrental">Car Rental</string>
    <string name="taxi">Taxi</string>
    <string name="gas">Gas</string>
    <string name="food">Food</string>
    <string name="error_place_details_not_available">We have no info about that place</string>
    <string name="error_place_details_retry">There was a problem retrieving the place details. Retrying...</string>
    <string name="error_network">We are having problems connecting to the server. Check your Internet connection or try again later.</string>
    <string name="description">DESCRIPTION</string>
    <string name="reviews">REVIEWS</string>
    <string name="photos">PHOTOS</string>
    <string name="action_share">Share</string>
    <string name="action_report">Report</string>
    <string name="send_report">Send report...</string>
    <string name="no_place_details">There\'s no more info about this place</string>
    <string name="status_loading">Loading...</string>
    <string name="status_done">All done</string>
    <string name="status_no_places">No places found, try changing filters or location</string>
    <string name="status_no_places_dual_line">No places found.\nTry changing filters or location.</string>
    <string name="status_zoom_in">Zoom in to see the places</string>
    <string name="status_retry">Network error, retrying...</string>
    <string name="imageRadarMonocleDescription">Radar background</string>
    <string name="imageArrowInfoWindowMonocleDescription">Arrow pointing to place</string>

    <!-- Monocle -->
    <string name="scanning">Scanning...</string>
    <string name="title_activity_monocle">Swipper Monocle</string>
    <string name="hello_world">Hello world!</string>
    <string name="radar_north_monocle">N</string>

</resources>