<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Title Bar -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imagePlaceType_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/imageLocationTypeDescription" />

        <TextView
            android:id="@+id/textPlaceName_PlaceDetails"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageExitButon_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/imageExitButtonDescription" />
    </LinearLayout>

    <!-- Location Details -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textStreetName_PlaceDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textCityStateZip_PlaceDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textStreetName_PlaceDetails" />

        <TextView
            android:id="@+id/textTelephoneNumber_PlaceDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textCityStateZip_PlaceDetails"
            android:contentDescription="" />

        <TextView
            android:id="@+id/textDistanceToChosenPlace_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/imageGenericLocation_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/textDistanceToChosenPlace_PlaceDetails"
            android:contentDescription="@string/imageGenericLocationDescription" />

        <TextView
            android:id="@+id/textEditGeolocationInformation_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/textEditGeolocationInformation_PlaceDetails" />
    </RelativeLayout>

    <!-- Description Section -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textDescriptionHeader_PlaceDetails" />

        <TextView
            android:id="@+id/textPlaceDescription_PlaceDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="@integer/maxDescriptionLines_PlaceDetails" />

        <TextView
            android:id="@+id/textReadMoreDescription_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/textReadMoreDescription_PlaceDetails" />
    </LinearLayout>

    <!-- Reviews Section -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textReviewsHeader_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textReviewsHeader_PlaceDetails" />

        <RatingBar
            android:id="@+id/ratingReviewsAverage_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textReviewsHeader_PlaceDetails"
            android:numStars="@integer/maxReviewRatingStars" />

        <TextView
            android:id="@+id/textReviewCount_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ratingReviewsAverage_PlaceDetails" />

        <TextView
            android:id="@+id/textAddReview_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/textAddReview_PlaceDetails" />

        <TextView
            android:id="@+id/textReviewContent_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textReviewsHeader_PlaceDetails"
            android:maxLines="@integer/maxReviewLines_PlaceDetails" />

        <RatingBar
            android:id="@+id/ratingReviewShown_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textReviewContent_PlaceDetails"
            android:numStars="@integer/maxReviewRatingStars" />

        <TextView
            android:id="@+id/textMoreReviews_PlaceDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ratingReviewShown_PlaceDetails"
            android:text="@string/textMoreReviews_PlaceDetails" />
    </RelativeLayout>

    <!-- Photos Section -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textPhotosHeader_PlaceDetails" />

        <Gallery
            android:id="@+id/galleryPlacePhotos_PlaceDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Other options -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageShowPlaceInMap_PlaceDetails"
            android:contentDescription="@string/imageShowPlaceInMapDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/imageNavigateToPlace_PlaceDetails"
            android:contentDescription="@string/imageNavigateToPlaceDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/imageCallToPlace_PlaceDetails"
            android:contentDescription="@string/imageCallToPlaceDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/imageSharePlace_PlaceDetails"
            android:contentDescription="@string/imageSharePlaceDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>