<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textPlaceName_QuickInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageGenericLocation_QuickInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPlaceName_QuickInfo"
        android:contentDescription="@string/imageGenericLocationDescription" />

    <TextView
        android:id="@+id/textDistanceToChosenPlace_QuickInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageGenericLocation_QuickInfo" />

    <RatingBar
        android:id="@+id/ratingReviewsAverage_QuickInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textDistanceToChosenPlace_QuickInfo"
        android:numStars="@integer/maxReviewRatingStars" />

    <TextView
        android:id="@+id/textReviewCount_QuickInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ratingReviewsAverage_QuickInfo" />

    <ImageView
        android:id="@+id/imageSharePlace_QuickInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/imageSharePlaceDescription" />

    <ImageView
        android:id="@+id/imageCallToPlace_QuickInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/imageSharePlace_QuickInfo"
        android:contentDescription="@string/imageCallToPlaceDescription" />

    <ImageView
        android:id="@+id/imageNavigateToPlace_QuickInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/imageCallToPlace_QuickInfo"
        android:contentDescription="@string/imageNavigateToPlaceDescription" />

</RelativeLayout>